# thallium-rpc-pool-benchmarks

./: CMakeLists.txt  README.md  client.cpp  init-env.sh  run_job.qsub  server.cpp  server_provider.cpp  spackfind_output
cpu_intensive_task_nopool/: margo.x3001c0s13b0n0.20496.series.json  margo.x3001c0s13b0n0.20496.stats.json  margo.x3001c0s13b0n0.20884.series.json  margo.x3001c0s13b0n0.20884.stats.json  margo.x3001c0s13b1n0.12077.series.json  margo.x3001c0s13b1n0.12077.stats.json  margo.x3001c0s13b1n0.12472.series.json  margo.x3001c0s13b1n0.12472.stats.json  margo.x3001c0s19b0n0.11130.series.json  margo.x3001c0s19b0n0.11130.stats.json  margo.x3001c0s19b0n0.11516.series.json  margo.x3001c0s19b0n0.11516.stats.json  margo.x3001c0s19b1n0.11836.series.json  margo.x3001c0s19b1n0.11836.stats.json  margo.x3001c0s19b1n0.12224.series.json  margo.x3001c0s19b1n0.12224.stats.json
cpu_intensive_task_pool/: margo.x3001c0s13b0n0.22862.series.json  margo.x3001c0s13b0n0.22862.stats.json  margo.x3001c0s13b0n0.22874.series.json  margo.x3001c0s13b0n0.22874.stats.json  margo.x3001c0s13b1n0.13959.series.json  margo.x3001c0s13b1n0.13959.stats.json  margo.x3001c0s13b1n0.13971.series.json  margo.x3001c0s13b1n0.13971.stats.json  margo.x3001c0s19b0n0.13012.series.json  margo.x3001c0s19b0n0.13012.stats.json  margo.x3001c0s19b0n0.13023.series.json  margo.x3001c0s19b0n0.13023.stats.json  margo.x3001c0s19b1n0.13723.series.json  margo.x3001c0s19b1n0.13723.stats.json  margo.x3001c0s19b1n0.13733.series.json
cpu_intensive_task_pool_num_stacks_128/: margo.x3004c0s37b0n0.12461.series.json  (+15 more)
(+84 files in other folders)
